Initial grid set-up with 3 fixed columns, and gap for row and column

--- a/Udemy/Modern Javascript (from novice to ninja)/Youtube/styles.css
+++ b/Udemy/Modern Javascript (from novice to ninja)/Youtube/styles.css
@@ -4,8 +4,7 @@ p{
     margin-bottom: 0;
 }
 .thumbnail{
-    display: block;
-    width: 300px;
+    width: 100%;
 }
 .thumbnail-row{
     margin-bottom: 12px;
@@ -19,12 +18,6 @@ p{
     font-weight: 500;
     line-height: 20px;
     margin-bottom: 10px;
-}
-.video-preview{
-    width: 300px;
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 15px;
 }
 
 .profile-picture{
@@ -49,5 +42,6 @@ p{
 .video-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 5px;
+    column-gap: 25px;
+    row-gap: 40px;
 }
